# quirk

./: Cargo.toml  README.md  quirk-bench.sh
src/: lib.rs  main.rs
