[package]
name = "quirk"
version = "0.1.0"
authors = ["Chojan Shang <psiace@outlook.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/ritedb/quirk"
description = "Quirk - A more concise performance evaluation for kvstore."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
statrs = "0.13.0"

sled = "0.34"
